# home-assistant-yarbo

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  =2026.3.12  CONTRIBUTING.md  README.md  format.py  hacs.json  patch.py  patch2.py  patch_lines.py  patch_lines2.py  patch_test.py  patch_test2.py  pyproject.toml  requirements_test.txt  sitecustomize.py  usercustomize.py
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  device_report.yml  feature_request.yml
.github/workflows/: auto-create-pr.yml  ci.yml  codeql.yml  (+5 more)
aiodns/: __init__.py
docs/: CHANGELOG.md  SCHOLAR-FINDINGS.md  _config.yml  architecture.md  automations.md  blueprints.md  brands-pr.md  changelog.md  cloud-api.md  communication-architecture.md  config-flow.md  configuration.md  development.md  entities.md  events.md  faq.md  getting-started.md  hacs-default-submission.md  index.md  mqtt-data-feedback-payload.md  mqtt-protocol.md  multi-head.md  protocol-reference.md  roadmap.md  security.md  services.md  testing-before-release.md  troubleshooting.md
pycares/: __init__.py
scripts/: analyze_mqtt_capture.py  capture_mqtt_traffic.py  install_latest_to_hass.sh
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_blueprint.py  test_button.py  test_cloud_auth.py  test_config_flow.py  test_controller.py  test_coordinator.py  test_coordinator_performance.py  test_device_tracker.py  test_init.py  test_light.py  test_number.py  test_options.py  test_repairs.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_update.py
(+91 files in other folders)
